tests/baselines/reference/compoundArithmeticAssignmentWithInvalidOperands.errors.txt
==== tests/cases/compiler/compoundArithmeticAssignmentWithInvalidOperands.ts (68 errors) ====
    enum E { a, b }
    
    var a: any;
    var b: void;
    
    var x1: boolean;
    x1 *= a;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(7,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x1 *= b;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(8,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(8,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x1 *= true;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(9,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(9,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x1 *= 0;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(10,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x1 *= ''
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(11,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(11,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x1 *= E.a;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(12,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x1 *= {};
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(13,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(13,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x1 *= null;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(14,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(14,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x1 *= undefined;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(15,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~~~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(15,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var x2: string;
    x2 *= a;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(18,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x2 *= b;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(19,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(19,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x2 *= true;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(20,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(20,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x2 *= 0;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(21,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x2 *= ''
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(22,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(22,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x2 *= E.a;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(23,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x2 *= {};
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(24,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(24,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x2 *= null;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(25,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(25,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x2 *= undefined;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(26,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~~~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(26,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var x3: {};
    x3 *= a;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(29,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x3 *= b;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(30,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(30,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x3 *= true;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(31,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(31,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x3 *= 0;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(32,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x3 *= ''
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(33,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(33,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x3 *= E.a;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(34,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x3 *= {};
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(35,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(35,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x3 *= null;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(36,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(36,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x3 *= undefined;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(37,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~~~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(37,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var x4: void;
    x4 *= a;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(40,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x4 *= b;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(41,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(41,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x4 *= true;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(42,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(42,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x4 *= 0;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(43,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x4 *= ''
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(44,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(44,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x4 *= E.a;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(45,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x4 *= {};
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(46,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(46,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x4 *= null;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(47,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(47,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x4 *= undefined;
    ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(48,1): error TS2113: The left-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
          ~~~~~~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(48,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var x5: number;
    x5 *= b;
          ~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(51,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x5 *= true;
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(52,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x5 *= ''
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(53,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x5 *= {};
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(54,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    
    var x6: E;
    x6 *= b;
          ~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(57,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x6 *= true;
          ~~~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(58,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x6 *= ''
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(59,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.
    x6 *= {};
          ~~
!!! compoundArithmeticAssignmentWithInvalidOperands.ts(60,7): error TS2112: The right-hand side of an arithmetic operation must be of type 'any', 'number' or an enum type.